<resources>
    <string name="app_name">Calculadora</string>

    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_6">6</string>
    <string name="bt_5">5</string>
    <string name="bt_4">4</string>
    <string name="bt_3">3</string>
    <string name="bt_2">2</string>
    <string name="bt_1">1</string>
    <string name="bt_0">0</string>
    <string name="bt_soma">+</string>
    <string name="bt_div">/</string>
    <string name="bt_sub">-</string>
    <string name="bt_mul">*</string>
    <string name="bt_apagar">p</string>
    <string name="bt_igual">=</string>
    <string name="bt_ponto">.</string>
    <string name="bt_vir">,</string>





</resources>
