<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tecinfo.calculadora.MainActivity">

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="347dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        tools:layout_editor_absoluteX="294dp">

        <Button
            android:id="@+id/bt_apagar"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:text="@string/bt_apagar" />

        <Button
            android:id="@+id/bt_soma"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:text="@string/bt_soma" />

        <Button
            android:id="@+id/bt_sub"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:text="@string/bt_sub" />

        <Button
            android:id="@+id/bt_mul"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:text="@string/bt_mul" />

        <Button
            android:id="@+id/bt_div"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:text="@string/bt_div" />

        <Button
            android:id="@+id/bt_igual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_igual" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <TextView
        android:id="@+id/displayConta"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/displayResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="30sp" />


    <TextView
        android:id="@+id/displayResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="106dp" />

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="348dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:background="#ccc"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_7"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_7" />

            <Button
                android:id="@+id/bt_8"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_8" />

            <Button
                android:id="@+id/bt_9"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_4"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_4" />

            <Button
                android:id="@+id/bt_5"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_5" />

            <Button
                android:id="@+id/bt_6"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_1"
                android:layout_width="wrap_content"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_1" />

            <Button
                android:id="@+id/bt_2"
                android:layout_width="wrap_content"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_2" />

            <Button
                android:id="@+id/bt_3"
                android:layout_width="wrap_content"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_0"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_0" />

            <Button
                android:id="@+id/bt_ponto"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_ponto" />

            <Button
                android:id="@+id/bt_vir"
                android:layout_width="0dp"
                android:layout_height="150px"
                android:layout_weight="1"
                android:text="@string/bt_vir" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
